--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "prettier": "^1.16.4"
   },
   "scripts": {
-    "develop": "gatsby develop",
+    "start": "gatsby develop",
     "build": "gatsby build",
     "lint": "./node_modules/.bin/eslint src"
   }
