--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-portfolio",
-  "title": "gabrielecanepa",
+  "title": "gabriele canepa { developer & teacher }",
   "titleShort": "gabrielecanepa",
   "description": "Personal portfolio built with Gatsby and styled-components.",
   "author": {
@@ -39,7 +39,6 @@
     "react-helmet": "^5.2.1",
     "react-spring": "^8.0.25",
     "styled-components": "^4.3.1",
-    "typed.js": "^2.0.11",
     "typeface-open-sans": "^0.0.54"
   },
   "devDependencies": {
