--- a/.eslintrc
+++ b/.eslintrc
@@ -35,13 +35,21 @@
     "Promise": true
   },
   "rules": {
-    "import/namespace": ["error", { "allowComputed": true }],
+    "import/namespace": [2, { "allowComputed": true }],
     "jsx-a11y/no-autofocus": 0,
     "max-lines": 2,
     "no-console": 1,
-    "object-shorthand": ["error", "always"],
+    "no-var": 2,
+    "object-shorthand": [2, "always"],
+    "prefer-const": [
+      2,
+      {
+        "destructuring": "any",
+        "ignoreReadBeforeAssign": false
+      }
+    ],
     "prettier/prettier": [
-      "error",
+      2,
       {
         "printWidth": 120,
         "singleQuote": true,
@@ -51,10 +59,17 @@
         "jsxBracketSameLine": false
       }
     ],
-    "quotes": ["error", "single", { "avoidEscape": true }],
+    "quotes": [2, "single", { "avoidEscape": true }],
     "react/forbid-component-props": 0,
     "react/forbid-prop-types": 0,
-    "react/jsx-curly-brace-presence": ["error", { "props": "never", "children": "ignore" }],
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
+      }
+    ],
+    "react/jsx-curly-brace-presence": [2, { "props": "never", "children": "ignore" }],
     "react/jsx-filename-extension": 0,
     "react/jsx-handler-names": 0,
     "react/jsx-max-depth": [2, { "max": 5 }],
@@ -62,7 +77,7 @@
     "react/jsx-pascal-case": [2, { "ignore": ["SEO"] }],
     "react/jsx-props-no-spreading": 0,
     "react/jsx-sort-props": [
-      "error",
+      2,
       {
         "callbacksLast": false,
         "shorthandFirst": false,
@@ -77,15 +92,15 @@
     "react/prop-types": 0,
     "react/require-optimization": 0,
     "react/sort-prop-types": [
-      "error",
+      2,
       {
         "callbacksLast": false,
         "ignoreCase": true,
         "requiredFirst": false
       }
     ],
-    "react-hooks/exhaustive-deps": "warn",
-    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": 1,
+    "react-hooks/rules-of-hooks": 2,
     "sort-imports-es6-autofix/sort-imports-es6": [
       2,
       {
