--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gatsby-cli": "^2.7.20",
     "gatsby-image": "^2.1.4",
     "gatsby-plugin-favicon": "^3.1.6",
-    "gatsby-plugin-offline": "^2.1.3",
+    "gatsby-plugin-offline": "^2.2.9",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-sharp": "^2.4.0",
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@hot-loader/react-dom": "16.8.6",
     "babel-plugin-styled-components": "^1.10.6",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.0",
