--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-portfolio",
   "title": "gabrielecanepa",
   "titleShort": "gabrielecanepa",
-  "description": "Portfolio with parallax effects and animations built with Gatsby and styled-components",
+  "description": "Portfolio with parallax effects and animations, built with Gatsby and styled-components",
   "author": {
     "name": "Gabriele Canepa",
     "email": "hello@gabrielecanepa.com"
@@ -37,6 +37,7 @@
     "github-calendar": "^1.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dropdown-select": "^4.1.1",
     "react-helmet": "^5.2.1",
     "react-spring": "^8.0.25",
     "styled-components": "^4.3.1",
