--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-helmet": "^5.2.1",
     "react-spring": "^8.0.25",
     "styled-components": "^4.3.1",
-    "typeface-open-sans": "^0.0.54"
+    "typeface-open-sans": "^0.0.54",
+    "use-persisted-state": "^0.3.0"
   },
   "devDependencies": {
     "@hot-loader/react-dom": "16.8.6",
