--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-spring": "^8.0.25",
     "styled-components": "^4.3.1",
     "typeface-open-sans": "^0.0.54",
+    "use-dark-mode": "^2.3.1",
     "use-persisted-state": "^0.3.0"
   },
   "devDependencies": {
