--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Portfolio with parallax effects and animations, built with Gatsby and styled-components",
   "author": {
     "name": "Gabriele Canepa",
-    "email": "hello@gabrielecanepa.com"
+    "email": "contact@gabrielecanepa.com"
   },
   "repository": {
     "url": "https://github.com/gabrielecanepa/gatsby-portfolio",
